--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
+wheel==0.30.0
+numpy==1.16.2
+pip==9.0.1
+matplotlib==3.3.3
 seaborn==0.11.1
-numpy==1.20.1
-pandas==1.2.2
-matplotlib==3.3.4
+pandas==1.1.5
